# tracegraph

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: default.yaml
configs/ablations/: edge_entity_only.yaml  edge_lexical_only.yaml  edge_next_only.yaml  high_budget.yaml  low_budget.yaml  medium_budget.yaml  no_callbacks.yaml
configs/evaluation/: demo.yaml  final_eval_small.yaml  hotpotqa_dev_full.yaml  hotpotqa_dev_small.yaml
configs/retrieval/: bm25_graph.yaml  bm25_graph_callbacks.yaml  bm25_only.yaml  embedding_graph.yaml  final_demo.yaml
data/demo/: demo_documents.jsonl  demo_qa.jsonl
data/outputs/: final_demo_answer.json
examples/: example_output.md  example_questions.md
scripts/: build_final_report.py  build_graph.py  download_spacy_model.sh  evaluate.py  generate_report.py  prepare_demo_corpus.py  prepare_hotpotqa.py  run_ablations.py  run_agent_demo.py  run_retrieval_demo.py  web_dump_graph.py
src/tracegraph/: __init__.py  cli.py  version.py
tests/: conftest.py  test_agent_callbacks.py  test_bm25_index.py  test_chunking.py  test_citation.py  test_cli.py  test_context_assembly.py  test_edge_builders.py  test_end_to_end_demo.py  test_entity_extraction.py  test_evidence.py  test_graph_builder.py  test_metrics.py  test_path_explainer.py  test_persistence.py  test_preprocess.py  test_seed_retrieval.py  test_traversal.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: answer-panel.tsx  bench.tsx  console.tsx  corpus.tsx  graph-canvas.tsx  masthead.tsx  node-inspector.tsx  timeline.tsx  (+1 more)
(+59 files in other folders)
