[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracegraph"
version = "0.1.0"
description = "TraceGraph: Revisitable Memory Agents with Graph-Based Memory Traversal"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "TraceGraph Project" }]
dependencies = [
  "typer>=0.12.3",
  "pydantic>=2.7.0",
  "PyYAML>=6.0.1",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.4.0",
  "networkx>=3.2.0",
  "rank-bm25>=0.2.2",
  "tqdm>=4.66.0",
  "spacy>=3.7.0",
]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=2.6.0"]
pretty = ["rich>=13.7.0"]
dev = ["pytest>=8.2.0", "pytest-cov>=5.0.0"]

[project.scripts]
tracegraph = "tracegraph.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
